# storage-management

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  test.db
.github/workflows/: build_docker.yml  test_backend.yml
backend/: .dockerignore  .env.sample  .gitignore  .pdm-python  Dockerfile  pre-commit-config.yaml  pyproject.toml
backend/alembic/: env.py  migration_test.sh
backend/alembic/versions/: 0e4e5b0b58e8_hardware_list_reorder.py  26d7391fbb47_added_label_queue.py  34229333d949_link_storagetype.py  5684dcc0cd06_added_storage_type.py  696a331b0566_renamed_hwitem_location.py  763c6d8c4452_linked_storage_hwi.py  8646c84fc4ef_added_label_and_description_to_hwitem.py  ac86aef280b5_initial_schema.py  b049b2c878ef_strateg_nullable.py
backend/app/: database.py  dependencies.py  init.py  init_db.py  lifespan.py  main.py
backend/app/api/: __init__.py  hardware_item.py  label_printing.py  locations.py  pagination.py  printing_strategies.py  storage_element.py  storage_type.py
backend/app/domain/: __init__.py
backend/app/domain/printing/: __init__.py  box.py  gridfinity.py  label_sheet.py  print_strategy.py  printer.py  spec_print_strategy.py
backend/app/models/: __init__.py  __initi__.py  hardware_item.py  printable.py  storage_element.py  storage_type.py  user.py
backend/app/schemas/: __init__.py  hardware_item.py  label_printing.py  printing_strategy.py  storage_element.py  storage_type.py  user.py
backend/app/types/: __init__.py  url.py
backend/docker/: entrypoint.sh
backend/tests/: conftest.py  test_main.py
backend/tests/api/: test_hardwareitems.py  test_label_printing.py  test_printing_strategies.py  test_storagelement.py  test_storagetype.py
backend/tests/domain/printing/: new_printing_strategy.py  test_gridfinity_strategy.py  test_gridfinity_yml_strategy.py  test_label_sheet.py  test_printer.py  test_printing_strategy.py  test_yml_strategy.py
backend/tests/resources/: print-strategy-test-wrong.yml  print-strategy-test.yml
backend/tests/seeds/: hardware_items.csv  storage_element.csv  storage_type.csv
backend/tests/utils/: asserts.py  db_seed_loader.py  helpers.py  pdf_test_utils.py
design/: label-printing.md  logo.xcf  print-strategy.yml
frontend/: .dockerignore  .env.sample  .eslintrc.json  .prettierrc  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: config.json.sample  index.html
frontend/src/: App.tsx  Routes.tsx  config.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: endpoint.tsx  hardwareItem.tsx  printLabels.tsx  printStrategy.tsx  storageType.tsx  (+1 more)
(+36 files in other folders)
