
[project]
name = "storage_manager"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi", 
    "uvicorn[standard]", 
    "sqlalchemy", 
    "pydantic", 
    "python-dotenv", 
    "starlette>=0.46.1",
    "alembic>=1.15.2",
]

[dependency-groups]
dev = [
    "pytest",
    "flake8",
    "black",
    "pre-commit",
    "httpx",
    "pytest",
    "flake8",
    "black",
    "pre-commit",
    "deepdiff>=8.5.0",
]

[tool.pdm.scripts]
migrate = "alembic upgrade head"
makemigration = "alembic revision --autogenerate -m"
init_db = "python -m app.scripts.init_db"

[tool.pdm]
package = [{include = "app"},   { include = "alembic" }]
[tool.setuptools]
packages = ["app", "alembic"]
[tool.pytest.ini_options]
pythonpath = ["."]
